# array-broadcasting

./: .gitignore  mypy.ini  pyproject.toml  requirements.txt  setup.py
nope/: .clang-format  .clang-tidy  CMakeLists.txt  __init__.py  module.cpp
nope/cmake/: warnings_definition.cmake
nope/include/nope/: broadcasting.h  shape_and_strides_manipulation.h  tensor_data_type.h
nope/src/: CMakeLists.txt  is_contiguous.cpp  module.cpp  shape_and_strides_manipulation.cpp  tensor_data_type.cpp
source/: CMakeLists.txt
source/include/nope/: is_contiguous.h  tensor.h
source/src/: CMakeLists.txt  tensor_bindings.cpp
src/native/: CMakeLists.txt
src/native/include/nope/: shape_and_strides_manipulation.h
src/native/src/: broadcasting.cpp  is_contiguous.cpp  module.cpp  shape_and_strides_manipulation.cpp  tensor.cpp  tensor_bindings.h  tensor_data_type.cpp
src/nope/: tensor.py
tests/: array_info.py  test_broadcast_shapes.py  test_elemwise_operations.py  test_elemwise_performance.py  test_is_contiguous.py  test_shape_and_strides_manipulation.py  test_tensor_data_type.py
